force-app/main/default/objects/Activity/fields/OS_Alerta_Vencida__c.field-meta.xml
<CustomField>
    <fullName>OS_Alerta_Vencida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta vencida</label>
    <type>Checkbox</type>
</CustomField>