force-app/main/default/objects/Activity/fields/OS_CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>OS_CaseNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>