force-app/main/default/objects/Activity/fields/SEG_ReferenciaValija__c.field-meta.xml
<CustomField>
    <fullName>SEG_ReferenciaValija__c</fullName>
    <description>Referencia de Valija asociada a la tarea</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Referencia de Valija asociada a la tarea</inlineHelpText>
    <label>Referencia valija</label>
    <length>20</length>
    <type>Text</type>
</CustomField>